--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cubemap</title>
+    <title>公园全景</title>
     <link rel="stylesheet" type="text/css" href="../templates/css/base.css">
 
     <!-- Javascript -->
@@ -25,20 +25,10 @@
 
   <div id="ViewContainer" class="osgjs-fullpage">
     <!-- very important change the size of the parent element instead-->
-    <canvas id="View" style="height:100%;width:100%;" oncontextmenu="return false;"></canvas>
+    <canvas id="View" style="height:80%;width:100%;" oncontextmenu="return false;"></canvas>
   </div>
 
   <div class="osgjs-info osgjs-info-dark">
-
-    <a href="http://osgjs.org/" class="osgjs-powered" title="Powered by OSG.JS">
-      <img src="http://osgjs.org/assets/logo.png" alt="" width="32" height="32">
-      <strong>OSG.JS</strong>
-    </a>
-
-    <div class="osgjs-description">
-      This sample demonstrate how to use cubemap. Textures come from <a href="http://www.humus.name/index.php?page=Textures"> Humus</a>
-    </div>
-
   </div>
 
 </body>
